# deeb-cli-starter

./: Cargo.toml  README.md  todos.json
src/: main.rs
src/cli/: mod.rs
src/environment/: mod.rs
src/models/todo/: mod.rs
