[package]
name = "deeb-cli-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
deeb = "0.0.12"
dotenvy = "0.15.7"
log = "0.4.27"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
